# ROS2_KUKA_kr4_IndustiralRobot

./: kuka_kr4_default_config.rviz
kuka_kr4_SWmodel/: kuka_kr4_asm.SLDASM  link0_base.SLDPRT  link1_rotarytable.SLDPRT  link2_upperarm.SLDPRT  link3_lowerarm.SLDPRT  link4_upperhand.SLDPRT  link5_lowerhand.SLDPRT  link6_toolflange.SLDPRT  readme.txt  torch_p1.SLDPRT  torch_p2.SLDPRT  关于KUKA_kr4拆分重建的任务描述.docx
kuka_kr4_description/: CMakeLists.txt  package.xml  readme.txt
kuka_kr4_description/config/: joint_names_kuka_kr4_description.yaml
kuka_kr4_description/launch/: display.launch  gazebo.launch
kuka_kr4_description/meshes/: base_link.STL  l2.STL  l3.STL  l6.STL  link1.STL  link3.STL  link4.STL  link5.STL  link6.STL  tool.STL  tool2.STL  tool_1.STL
kuka_kr4_description/urdf/: kuka_kr4_description.csv  kuka_kr4_description.urdf
kuka_kr4_description_srdf/: .setup_assistant  CMakeLists.txt  package.xml  readme.txt
kuka_kr4_description_srdf/config/: initial_positions.yaml  kinematics.yaml  kuka_kr4_description.ros2_control.xacro  kuka_kr4_description.srdf  ros2_controllers.yaml
kuka_kr4_description_srdf/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
kuka_kr4_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr4_moveit2/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr4_description.ros2_control.xacro  kuka_kr4_description.srdf  kuka_kr4_description.urdf.xacro  (+2 more)
(+8 files in other folders)
