<package format="3">
  <name>kuka_kr4_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for kuka_kr4_config</p>
    <p>This package contains configuration data, 3D models and launch files
for kuka_kr4_config robot</p>
  </description>
  <author>StvLi</author>
  <maintainer email="3190102290@zju.edu.cn" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
